k8s/base/backstage/ingress-public.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: backstage-ingress-public
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: backstage-backend
                port:
                  number: 7007
          - path: /
            pathType: Prefix
            backend:
              service:
                name: backstage-frontend
                port:
                  number: 80
