k8s/base/backstage/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: backstage-ingress
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: "50m"
spec:
  ingressClassName: nginx
  rules:
    - host: portal.local
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: backstage-backend
                port:
                  number: 7007
          - path: /
            pathType: Prefix
            backend:
              service:
                name: backstage-frontend
                port:
                  number: 80
